# Rokid-Facial-Recognition-System

./: .gitignore  DEBUG_GUIDE.md  README.md  WARP.md
docs/: AR 智慧课堂助手 - 手机端 APP 需求规格说明书 (PRD).md  AR 智慧课堂识别系统 - 交互流程与 UI 设计方案.md  Rokid SDK DEMO 使用指南.md  Rokid 眼镜端应用安装与调试指南.md  系统设计报告.md
m-app/: PROJECT_OVERVIEW.md  local.properties  settings.gradle.kts
m-app/app/: build.gradle.kts
m-app/app/src/androidTest/java/com/sustech/bojayL/: ExampleInstrumentedTest.kt
m-app/app/src/main/: AndroidManifest.xml
m-app/app/src/main/jni/: CMakeLists.txt  face_recognition_jni.cpp  mobilefacenet.cpp  mobilefacenet.h  scrfd_jni.cpp
m-app/docs/: AR 智慧课堂伴侣 (手机端) 产品需求文档 (PRD).md  FIX_DUPLICATE_ATTENDANCE.md  GET_MOBILEFACENET_MODEL.md  IMPLEMENTATION_PROGRESS.md  MODEL_SETUP.md  Rokid AR 智慧教育系统：用户流程与 UI 设计方案.md  手机端自动人脸识别与 HUD 界面 - 剩余实施计划.md
m-app/gradle/: libs.versions.toml
m-app/scripts/: download_mobilefacenet.sh  import_lfw_data.py
m-app/test_datasets/: README.md  create_mock_faces.py  download_test_dataset.py
m-app/test_datasets/lfw_export/: manifest.json  students.json
m-app/test_datasets/mock_faces/: README.txt
s-app/: WARP.md  local.properties  settings.gradle.kts
s-app/app/: build.gradle.kts  proguard-rules.pro
s-app/app/src/main/: AndroidManifest.xml
s-app/app/src/main/jni/: CMakeLists.txt  ncnn-20250503-android-vulkan  opencv-mobile-4.12.0-android  scrfd_jni.cpp
s-app/app/src/main/res/values/: strings.xml  themes.xml
s-app/docs/: ROKID_SDK_CUSTOM_MESSAGE_FIX.md
s-app/gradle/: libs.versions.toml
s-app/gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
